[package]
name = "ergoproxy"
version = "0.1.0"
edition = "2021"
authors = ["r00tkid"]
description = "Advanced Security Testing Proxy"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
h2 = "0.4"
hyper = { version = "1.1", features = ["full"] }
http = "1.0"
tokio-tungstenite = "0.21"
tungstenite = "0.21"
rustls = "0.22"
rustls-pemfile = "2.0"
tokio-rustls = "0.25"
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4"] }
futures = "0.3"
async-trait = "0.1"
bytes = "1.5"
